2000-10-30  Havoc Pennington  <hp@redhat.com>

	* gtktextbtree.c, gtktextbtree.h, gtktextbuffer.c,
	gtktextbuffer.h, gtktextchild.c, gtktextchild.h,
	gtktextchildprivate.h, gtktextdisplay.c, gtktextdisplay.h,
	gtktextiter.c, gtktextiter.h, gtktextiterprivate.h,
	gtktextlayout.c, gtktextlayout.h, gtktextmark.c, gtktextmark.h,
	gtktextmarkprivate.h, gtktextsegment.c, gtktextsegment.h,
	gtktexttag.c, gtktexttag.h, gtktexttagprivate.h,
	gtktexttagtable.c, gtktexttagtable.h, gtktexttypes.c,
	gtktexttypes.h, gtktextview.c, gtktextview.h:

	Massive reindentation and reformatting. Arg alignment and comments
	still need fixing in various places.

2000-10-30  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextview.h, gtk/gtktextview.c: Change run action signals
	to be named insert_at_cursor and delete_at_cursor so C++ can
	handle them.

2000-10-28  Tor Lillqvist  <tml@iki.fi>

	* gtk/gtkrc.c (gtk_rc_append_default_module_path): Make sure not
	to get a double directory separator in case the home directory
	ends with one. This would cause trouble especially on Windows,
	where the path will be confused with the syntax for an an UNC
	(network share) path \\server\share\path.
	(gtk_rc_add_initial_default_files): Ditto.

Sat Oct 28 02:33:09 2000  Robert Brady  <robert@suse.co.uk>

	* gtk/gtkmarshal.list: add new marshallers for GtkTextView.

	* gtk/gtktextview.c: Use correct marshallers.

Fri Oct 27 17:56:26 2000  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkliststore.c: Not sure how this ever worked.  Fixed it to
	use new iter stuff, and added all the appropriate signals et al.

	* gtk/gtktreedatalist.h: s/gtk/_gtk to further reinforce that this
	code is internal to gtk only.

2000-10-28  Tor Lillqvist  <tml@iki.fi>

	* gtk/gtk.def
	* gtk/makefile.{mingw,msc}.in: Adjust to Tim's changes. Use
	glib-genmarshal etc.

Fri Oct 27 20:15:00 2000  Tim Janik  <timj@gtk.org>

	* gtk/Makefile.am: added dependancies for testtextbuffer which broke
	parallel builds.
